feat: 병합시 발생한 버그 처리